refactor ruby api
Signed-off-by: David A. Cuadrado <krawek@gmail.com>

--- a/README.rdoc
+++ b/README.rdoc
@@ -1,23 +1,45 @@
-= Authy
+# Authy
 
 Ruby library to access the Authy API
 
-== Usage
+## Usage
 
     require 'authy'
 
     Authy.api_key = 'your-api-key'
-    Authy.api_uri = 'http://test-authy-api.heroku.com/'
-    Authy::API.register_user(:user => {:email => 'your@email.com'})
-    Authy::API.verify(:id => 'your-device-id', :token => 'current-token')
+    Authy.api_uri = 'https://api.authy.com/'
 
-Available calls:
 
-    #register_user
-    #moving_factor
-    #verify
+### Registering a user 
 
-== Contributing to authy
+`Authy::API.register_user` requires the user e-mail address and cellphone. Optionally you can pass in the country_code or we will asume
+USA. The call will return you the authy id for the user that you need to store in your database.
+
+Assuming you have a `users` database with a `authy_id` field in the `users` database.
+
+    authy = Authy::API.register_user(:email => 'users@email.com', :cellphone => "111-111-1111", :country_code => "1")
+
+    if authy.ok?
+      self.authy_id = authy.id # this will give you the user authy id to store it in your database
+    else
+      authy.errors # this will return an error hash
+    end
+
+
+### Verifying a user
+
+`Authy::API.verify` takes the authy_id that you are verifying and the token that you want to verify. You should have the authy_id in your database
+
+    response = Authy::API.verify(:id => user.authy_id, :token => 'token-user-entered')
+	
+	if response.ok?
+		//token was valid, user can sign in
+	else
+		//token is invalid
+		
+
+
+## Contributing to authy
 
 * Check out the latest master to make sure the feature hasn't been implemented or the bug hasn't been fixed yet.
 * Check out the issue tracker to make sure someone already hasn't requested it and/or contributed it.
